src/objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>ActiveModules__c</fullName>
        <label>Active Modules</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>FieloPLT__Segment__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubscriptionMode__c</fullName>
        <label>Subscription Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CourseProgram</fullName>
        <active>true</active>
        <description>Forces the user to choose a program in the Course object.</description>
        <errorConditionFormula>ISBLANK(Program__c)</errorConditionFormula>
        <errorDisplayField>Program__c</errorDisplayField>
        <errorMessage>You must select a Program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SameProgramSegment</fullName>
        <active>true</active>
        <description>The course must have a segment within the same program.</description>
        <errorConditionFormula>Segment__r.FieloPLT__Program__c  &lt;&gt;  Program__c &amp;&amp;  NOT(ISNULL(Segment__r.FieloPLT__Program__c) ||  ISBLANK(Segment__r.FieloPLT__Program__c))</errorConditionFormula>
        <errorDisplayField>Segment__c</errorDisplayField>
        <errorMessage>Segment must be on the same program.</errorMessage>
    </validationRules>
</CustomObject>